tests/purs/failing/TypedHole3.purs
-- @shouldFailWith HoleInferredType
module Main where

fn _ _ = ?help
